--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,15 +1,21 @@
 /* Navbar 기본 스타일 */
+.navbar-wrapper {
+    width: 100%;
+    background-color: #90ee90;
+}
+
 .navbar-container {
     width: 100%;
-    position: relative; /* 드롭다운 위치 기준점 */
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .navbar {
     width: 100%;
     height: 80px;
-    background-color: #90ee90;
-    display: flex; /* 메뉴 수직 중앙 정렬을 위해 추가 */
-    align-items: center; /* 메뉴 수직 중앙 정렬 */
+    display: flex;
+    align-items: center;
 }
 
 /* 메뉴 리스트 */
