--- a/src/components/Title.css
+++ b/src/components/Title.css
@@ -2,14 +2,13 @@
 
 .title-wrapper {
     width: 100%;
-    background-color: blueviolet;
+    background-color: white;
 }
 
 .title-container {
-    width: 100%;
-    font-family: 'Noto Sans KR', sans-serif;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0px;
 }
 
 .title-bar {
@@ -35,28 +34,44 @@
     grid-column: 2 / 5;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 2px;
 }
 
 .school-title-kr {
     font-size: 24px;
     font-weight: 700;
-    color: #333;
+    color: black;
 }
 
 .school-title-en {
     font-size: 16px;
-    color: #666;
+    color: black;
 }
 
 .school-title-dept {
     font-size: 14px;
-    color: #666;
+    color: black;
 }
 
 .info-helper {
-    grid-column: 5 / 6;
-    font-size: 32px;
+    grid-column: 5 / 8;
+    font-size: 40px;
     font-weight: 700;
-    color: #333;
-} 
+    color: black;
+}
+
+.divider {
+    width: 100vw;
+    height: 1px;
+    background-color: #000;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+}
+
+.title-section {
+    width: 100%;
+    background-color: white;
+}
