--- a/src/components/Title.css
+++ b/src/components/Title.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
 
 .title-wrapper {
-    width: 100%;
-    background-color: white;
+    width: 100vw;
+    background-color: #f5f5f5;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
 }
 
 .title-container {
@@ -57,13 +62,13 @@
     grid-column: 5 / 8;
     font-size: 40px;
     font-weight: 700;
-    color: black;
+    color: RGB(31, 36, 39);
 }
 
 .divider {
     width: 100vw;
     height: 1px;
-    background-color: #000;
+    background-color: RGB(209, 217, 224);
     position: relative;
     left: 50%;
     right: 50%;
@@ -73,5 +78,5 @@
 
 .title-section {
     width: 100%;
-    background-color: white;
+    background-color: #f5f5f5;
 }
