--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -98,7 +98,7 @@
 /* 드롭다운 내부 스타일 */
 .dropdown-inner {
     grid-column: 5 / 9;
-    padding: 15px 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -108,7 +108,7 @@
     transition: 
         opacity 0.3s ease 0.1s,
         transform 0.3s ease 0.1s;
-    height: 100%;
+    height: 90px;
 }
 
 .dropdown-inner a {
@@ -116,7 +116,7 @@
     color: #333;
     font-size: 16px;
     font-family: 'Noto Sans KR', sans-serif;
-    padding: 5px 0;
+    padding: 0;
     transition: color 0.2s ease;
     white-space: pre-line;
     text-align: center;
