--- a/src/components/Title.css
+++ b/src/components/Title.css
@@ -117,6 +117,11 @@
         text-align: center;
     }
 
+    .school-title-en,
+    .school-title-dept {
+        display: none;
+    }
+
     .info-helper {
         grid-column: 1;
         text-align: center;
