--- a/src/components/OT.css
+++ b/src/components/OT.css
@@ -41,6 +41,7 @@
     display: flex;
     padding: 0px 20px;
     gap: 20px;
+    align-items: flex-start;
 }
 
 .posts-content {
@@ -93,7 +94,7 @@
 
 .sidebar h3 {
     margin-top: 0;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     border-bottom: 2px solid #007bff;
 }
 
@@ -121,7 +122,7 @@
 }
 
 .post-detail {
-    padding: 20px;
+    padding: 10px 20px;
 }
 
 .post-detail h2 {
@@ -143,7 +144,11 @@
     .content-wrapper {
         flex-direction: column;
         padding: 0px 10px;
-    
+        align-items: stretch;
+    }
+
+    .posts-content, .sidebar {
+        flex-grow: 1;
     }
 
     .sidebar {
