--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -7,10 +7,11 @@
     right: 50%;
     margin-left: -50vw;
     margin-right: -50vw;
+    padding-bottom: 40px;
 }
 
 .main-content {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0;
+    padding: 0 0 40px 0;
 } 
