--- a/src/components/Title.css
+++ b/src/components/Title.css
@@ -8,6 +8,7 @@
     right: 50%;
     margin-left: -50vw;
     margin-right: -50vw;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 .title-container {
