--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
 
 .calendar-container {
-    width: calc(100% - 40px);
+    width: 800px;
     margin: 20px auto 0;
     padding: 20px 20px;
     background-color: #f5f5f5;
