--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
     padding: 0;
     overflow-x: hidden; /* 가로 스크롤 방지 */
     width: 100%;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 .App {
