--- a/src/components/OT/OT.css
+++ b/src/components/OT/OT.css
@@ -21,6 +21,9 @@
     margin-bottom: 20px;
     padding: 10px 20px;
     border-bottom: 1px solid #ddd;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .category-btn {
@@ -43,6 +46,9 @@
     padding: 0px 20px;
     gap: 20px;
     align-items: flex-start;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .posts-content {
