--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -8,10 +8,12 @@
     margin-left: -50vw;
     margin-right: -50vw;
     padding-bottom: 40px;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-content {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 0 40px 0;
+    padding: 0 0;
 } 
