--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -6,6 +6,7 @@
     margin-left: calc(50% - 50vw);
     background-color: #f5f5f5;
     font-family: 'Noto Sans KR', sans-serif;
+    position: relative;
 }
 
 
@@ -44,7 +45,9 @@
     width: 100%;
     height: 1px;
     background-color: rgb(209, 217, 224);
-    margin-top: 8px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 .navbar-wrapper {
