--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
+
 /* 최상위 레벨에서 모든 기본 마진과 패딩을 제거 */
 * {
     margin: 0;
@@ -10,7 +12,7 @@ body {
     padding: 0;
     overflow-x: hidden; /* 가로 스크롤 방지 */
     width: 100%;
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Pretendard', sans-serif;
 }
 
 .App {
