--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
+
 .navbar-container {
     width: 100%;
     position: static;
@@ -29,7 +31,7 @@
     padding: 10px 10px;
     font-size: 18px;
     font-weight: 500;
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Pretendard', sans-serif;
     background-color: #f5f5f5;
     border-radius: 4px;
     transition: background-color 0.3s ease;
@@ -139,7 +141,7 @@
     text-decoration: none;
     color: #333;
     font-size: 16px;
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Pretendard', sans-serif;
     padding: 0;
     transition: color 0.2s ease;
     white-space: pre-line;
