--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
 
 .title-section {
     width: 100vw;
     height: 100%;
     margin-left: calc(50% - 50vw);
     background-color: #f5f5f5;
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Pretendard', sans-serif;
     position: relative;
 }
 
