--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,6 +1,6 @@
-.content-background {
+.main-content-background {
     width: 100vw;
-    background-color: #f5f5f5;
+    background-color: #F5F5F7;
     min-height: calc(100vh - 260px);
     position: relative;
     left: 50%;
