--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -128,6 +128,17 @@
     margin-bottom: 5px;
 }
 
+.day-number.today {
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .day-events {
     display: flex;
     flex-direction: column;
