--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -107,6 +107,12 @@
     width: 100%;
 }
 
+.month-display-text {
+    color: #000;
+    font-weight: 500;
+    font-size: 1.2rem;
+}
+
 .weekday {
     background-color: #f5f5f5;
     padding: 10px;
