--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* 최상위 레벨에서 모든 기본 마진과 패딩을 제거 */
 * {
