--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -144,6 +144,7 @@
         border: none;
         cursor: pointer;
         padding: 0;
+        transition: opacity 0.3s ease;
     }
 
     .hamburger-button span {
@@ -151,21 +152,11 @@
         width: 100%;
         height: 2px;
         background-color: #000;
-        transition: all 0.3s ease;
     }
 
-    .hamburger-button.open span:nth-child(1) {
-        transform: translateY(9px) rotate(45deg);
-        background-color: #fff;  /* 메뉴 열렸을 때 흰색으로 변경 */
-    }
-
-    .hamburger-button.open span:nth-child(2) {
+    .hamburger-button.hidden {
         opacity: 0;
-    }
-
-    .hamburger-button.open span:nth-child(3) {
-        transform: translateY(-9px) rotate(-45deg);
-        background-color: #fff;  /* 메뉴 열렸을 때 흰색으로 변경 */
+        pointer-events: none;
     }
 }
 
